--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -22,6 +22,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <!-- external js -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
   </head>
   <body ng-app="starter">
 
